Rewrite KeySequenceItem (and helper) to use KeySequenceRecorder

Use the new KeySequenceRecorder which was created for this purpose. We can
remove almost all logic from the helper aside from the conflict checking.
BUG:407395
BUG:427730