src/qmlcontrols/kquickcontrols/KeySequenceItem.qml
@@ -1,14 +1,17 @@
 import QtQuick 2.0
 import QtQuick.Controls 2.12
 import QtQuick.Layouts 1.1
+import QtQuick.Window 2.15
 
 import org.kde.private.kquickcontrols 2.0 as KQuickControlsPrivate
 
 RowLayout {
+    id: root
     property alias showClearButton: clearButton.visible
     property alias modifierlessAllowed: _helper.modifierlessAllowed
     property alias multiKeyShortcutsAllowed: _helper.multiKeyShortcutsAllowed
-    property alias keySequence: _helper.keySequence
+    property var keySequence
+
     /**
      * This property controls which types of shortcuts are checked for conflicts when the keySequence
      * is set. If a conflict is detected, a messagebox will be shown asking the user to confirm their
@@ -39,10 +42,13 @@ RowLayout {
 
     KQuickControlsPrivate.KeySequenceHelper {
         id: _helper
-
-        onCaptureFinished: {
+        window: renderWindow(parent.Window.window)
+        onGotKeySequence: {
+            if (isKeySequenceAvailable(keySequence)) {
+                root.keySequence = keySequence
+            }
             mainButton.checked = false;
-            parent.captureFinished();
+            root.captureFinished();
         }
     }
 
@@ -57,13 +63,25 @@ RowLayout {
 
         icon.name: "configure"
 
-        property string shortcut
         checkable: true
         focus: checked
 
         hoverEnabled: true
 
-        text: _helper.shortcutDisplay
+        text: {
+            const keys = _helper.isRecording ? _helper.currentKeySequence : parent.keySequence
+            let text = " " // This space is intentional
+            if (keys == undefined || _helper.keySequenceIsEmpty(keys)) {
+                if (_helper.isRecording) {
+                    text += _tr.i18nc("What the user inputs now will be taken as the new shortcut", "Input")
+                } else {
+                     text += _tr.i18nc("No shortcut defined", "None");
+                }
+            } else {
+                text += _helper.keySequenceNativeText(keys)
+            }
+            return _helper.isRecording ? text.concat(" ... ") : text.concat(" ")
+        }
 
         ToolTip.visible: hovered
         ToolTip.delay: 1000
@@ -73,7 +91,7 @@ RowLayout {
         onCheckedChanged: {
             if (checked) {
                 mainButton.forceActiveFocus()
-                _helper.captureKeySequence()
+                _helper.startRecording()
             }
         }
 
@@ -82,29 +100,13 @@ RowLayout {
                 mainButton.checked = false
             }
         }
-
-        Keys.onShortcutOverride: {
-            if (_helper.isRecording) {
-                _helper.keyPressed(event.key, event.modifiers);
-                event.accepted = true;
-            }
-        }
-
-        Keys.onPressed: {
-            _helper.keyPressed(event.key, event.modifiers);
-            event.accepted = true;
-        }
-        Keys.onReleased: {
-            _helper.keyReleased(event.key, event.modifiers);
-            event.accepted = true;
-        }
     }
 
     Button {
         id: clearButton
         Layout.fillHeight: true
         Layout.preferredWidth: height
-        onClicked: _helper.clearKeySequence();
+        onClicked: root.keySequence = undefined
 
         //icon name determines the direction of the arrow, NOT the direction of the app layout
         icon.name: Qt.application.layoutDirection == Qt.LeftToRight ? "edit-clear-locationbar-rtl" : "edit-clear-locationbar-ltr"
